<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_gray"
    tools:context=".Menu_activity">

    <LinearLayout
        android:id="@+id/llTopButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Primer botón del grupo superior -->
        <Button
            android:id="@+id/btnAbc"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="200dp"
            android:layout_marginRight="10dp"
            android:drawableTop="@drawable/img_abecedario"
            android:text="@string/clasification1"
            />

        <!-- Segundo botón del grupo superior -->
        <Button
            android:id="@+id/btnMesesyTiempo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:drawableTop="@drawable/img_mesesytiempo"
            android:text="@string/clasification2"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/llTopButtons">

        <!-- Primer botón del grupo inferior -->
        <Button
            android:id="@+id/btnSaludos"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_height="200dp"
            android:drawableTop="@drawable/img_saludos"
            android:text="@string/clasification3"
            />

        <!-- Segundo botón del grupo inferior -->
        <Button
            android:id="@+id/btnFamiliar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:drawableTop="@drawable/img_familiar"
            android:text="@string/clasification4"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

