<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_gray"
    tools:context=".HomeActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

      <androidx.cardview.widget.CardView
          android:id="@+id/card1"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          app:cardCornerRadius="40dp"
          android:layout_margin="10dp"
          app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/shape_menutarjetas"
            tools:ignore="UseCompoundDrawables">


          <ImageView
              android:layout_width="match_parent"
              android:layout_height="160dp"
              android:layout_margin="40dp"
              android:src="@drawable/img_textoasena"
              android:contentDescription="@string/menu_text_sign"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/menu_text_sign"
              android:textColor="@color/black"
              android:textAlignment="center"
              android:textSize="25sp"/>
        </LinearLayout>
      </androidx.cardview.widget.CardView>
      <androidx.cardview.widget.CardView
          android:id="@+id/card2"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          app:cardCornerRadius="50dp"
          android:layout_margin="10dp"
          app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/shape_menutarjetas"
            tools:ignore="UseCompoundDrawables">
          <ImageView
              android:layout_width="match_parent"
              android:layout_height="200dp"
              android:layout_margin="20dp"
              android:src="@drawable/img_senaatexto"
              android:contentDescription="@string/menu_sign_text"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/menu_sign_text"
              android:textColor="@color/black"
              android:textAlignment="center"
              android:textSize="25sp"/>
        </LinearLayout>
      </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
      <androidx.cardview.widget.CardView
          android:id="@+id/card3"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          app:cardCornerRadius="40dp"
          android:layout_margin="10dp"
          app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/shape_menutarjetas"
            tools:ignore="UseCompoundDrawables">
          <ImageView
              android:layout_width="match_parent"
              android:layout_height="160dp"
              android:layout_margin="40dp"
              android:src="@drawable/basic_sign"
              android:contentDescription="@string/menu_basic_sign"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/menu_basic_sign"
              android:textColor="@color/black"
              android:textAlignment="center"
              android:textSize="25sp"/>
        </LinearLayout>
      </androidx.cardview.widget.CardView>
    </LinearLayout>

  </LinearLayout>